--- a/index.html
+++ b/index.html
@@ -86,8 +86,154 @@
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4"></div>
+          <div id="design"><img src="./img/design_icon.png">
+            <h6>DESIGN</h6>
         </div>
-      </div>
+        <div id="content">
+            <h6><b>DESIGN</b></h6>
+            <p>
+                Our design practice offers a full range of services including brand strategy, interaction and
+                visual design and user experience testing.
+                Throughout your project, our designers create and implement visual design and workflows, solicit
+                user feedback and work with you to make sure what gets built is what is needed.
+            </p>
+        </div>
+    </div>
+    <div class="col-md-4 col-xs-4">
+        <div id="dev"><img src="./img/dev_icon.png">
+            <h6>DEVELOPMENT</h6>
+        </div>
+        <div id="dev-content">
+            <h6><b>DEVELOPMENT</b></h6>
+            <p>
+                All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                They collaborate with your team to write, and improve code on a daily basis, using proven
+                practices such as test-driven development and pair programming.
+            </p>
+        </div>
+    </div>
+    <div class="col-md-4 col-xs-4">
+        <div id="product"><img src="./img/product_icon.png">
+            <h6>PRODUCT MANAGEMENT</h6>
+        </div>
+        <div id="prod-content">
+            <h6><b>PRODUCT MANAGEMENT</b></h6>
+            <p>
+                Planning and development is iterative. Because we are constantly coding and testing, the
+                products we build are always ready to go live.
+                This iterative process allows for changes as business requirements evolve.
+            </p>
+        </div>
+    </div>
+</div>
+</div><br><br><br>
+<div class="portfolio">
+<h5><strong>PORTFOLIO</strong></h5>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3" id="col-1">
+            <div id="photo1">
+                <img src="img/work4.jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text1" class="fade"><p>Black theme</p></div>
+        </div>
+        <div class="col-md-3" id="col-2">
+            <div id="photo2">
+                <img src="img/work3.jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text2" class="fade"><p>Ontario theme</p></div>
+        </div>
+        <div class="col-md-3" id="col-3">
+            <div id="photo3">
+                <img src="img/work2.jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text3" class="fade"><p>orange theme</p></div>
+        </div>
+        <div class="col-md-3" id="col-4">
+            <div id="photo4">
+                <img src="img/work1 (1).jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text4" class="fade"><p>Brave theme</p></div>
+        </div>
+    </div><br>
+    <div class="row">
+        <div class="col-md-3" id="col-5">
+            <div id="photo5">
+                <img src="img/work5.jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text5" class="fade"><p>Have a good day theme</p></div>
+        </div>
+        <div class="col-md-3" id="col-6">
+            <div id="photo6">
+                <img src="img/work6.jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text6" class="fade"><p>Equaliser theme</p></div>
+        </div>
+        <div class="col-md-3" id="col-7">
+            <div id="photo7">
+                <img src="img/work7.jpg" class="img-responsive" width="100%" class="img-thumbnail">
+            </div>
+            <div id="text7" class="fade"><p>Logo mock theme</p></div>
+        </div>
+        <div class="col-md-3" id="col-8">
+            <div id="photo8">
+                <img src="img/work8.jpg" class="img-responsive" width="100%">
+            </div>
+            <div id="text8" class="fade"><p>Giraffe resturant theme </p></div>
+        </div>
+    </div>
+</div>
+</div><br><br>
+<div class="contact">
+<h5><strong>CONTACT US</strong></h5>
+<form>
+    <div class="row put">
+        <div class="col-md-6 col-xs-6">
+            <input type="text" id="name" placeholder="Name.."required size="50px">
+        </div>
+        <div class="col-md-6">
+            <input type="email" name="email" id="email" placeholder="Email.."required size="50px">
+        </div>
+    </div><br>
+    <textarea name="message" id="message" cols="120" rows="10" placeholder="Your message here.."required></textarea><br>
+    <input type="submit" name="submit" value="submit" class="submit">
+</form>
+</div><br><br>
+<div class="row icon">
+<div class="col-md-1">
+    <img src="img/twitter.png" class="img-responsive" alt="twitter">
+</div>
+<div class="col-md-1">
+    <img src="img/dribble.png" class="img-responsive" alt="dribble">
+</div>
+<div class="col-md-1">
+    <img src="img/facebook.png" class="img-responsive" alt="facebook">
+</div>
+<div class="col-md-1">
+    <img src="img/g_plus.png" class="img-responsive" alt="google">
+</div>
+<div class="col-md-1">
+    <img src="img/skype.png" class="img-responsive" alt="skype">
+</div>
+<div class="col-md-1">
+    <img src="img/stumble_upon.png" class="img-responsive" alt="tumble">
+</div>
+<div class="col-md-1">
+    <img src="img/behance.png" class="img-responsive" alt="behance">
+</div>
+<div class="col-md-1">
+    <img src="img/pinterest.png" class="img-responsive" alt="pinterest">
+</div>
+<div class="col-md-1">
+    <img src="img/flickr.png" class="img-responsive" alt="flickr">
+</div>
+</div><br><br>
+<div class="end">
+<p>DELANI STUDIO</p>
+<P>2019</P>
+</div>
+</div>
     </div>
 
     <!-- Optional JavaScript -->
